# bazel-objc-test

./: WORKSPACE  module_map.bzl
RedditFoundation/: BUILD.bazel
RedditFoundation/ObjCLegacy/: RedditFoundationDefines.h
RedditFoundation/ObjCLegacy2/: NSObject+Safe.h  NSObject+Safe.m
RedditFoundation/RedditFoundationObjc/: BUILD.bazel  RedditFoundationDefines.h  RedditFoundationDefines.m  RedditFoundationObjc.h
RedditFoundation/RedditFoundationObjc2/: BUILD.bazel  NSObject+Safe.m  RedditFoundationObjc2.h
