load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
load("@//:module_map.bzl", "module_map")

redditFoundationObjc_hdrs = glob(
    ["**/*.h"]
)

# module_map(
#     name = "RedditFoundationObjc-modulemap",
#     hdrs = redditFoundationObjc_hdrs,
#     module_name = "RedditFoundationObjc",
# )

objc_library(
    name = "RedditFoundationObjc",
    # copts = ["-fmodules"],
    # deps = [":RedditFoundationObjc-modulemap"],
    srcs = glob(
        ["**/*.m"]
    ),
    hdrs = redditFoundationObjc_hdrs + [
        # These aren't headers but here is the only place to declare these
        # files as the inputs because objc_library doesn't have an
        # attribute to declare custom inputs.
        # ":RedditFoundationObjc-modulemap",
    ],
    enable_modules = True,
    module_name = "RedditFoundationObjc",
    # module_map = ":RedditFoundationObjc.modulemap",
    visibility = ["//visibility:public"],
)
