load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")

objc_library(
    name = "RedditFoundationObjc",
    srcs = glob(
        ["**/*.m"]
    ),
    hdrs = glob(
        ["**/*.h"]
    ),
    enable_modules = True,
    module_name = "RedditFoundationObjc",
    visibility = ["//visibility:public"],
)
