load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")
load("@//:module_map.bzl", "module_map")

redditFoundationObjc2_hdrs = glob(
    ["ObjCLegacy2/**/*.h"]
)

# module_map(
#     name = "RedditFoundationObjc2-modulemap",
#     hdrs = redditFoundationObjc2_hdrs,
#     module_name = "RedditFoundationObjc2",
# )

objc_library(
    name = "RedditFoundationObjc2",
    deps = [
        "//RedditFoundation/RedditFoundationObjc", 
        # ":RedditFoundationObjc2-modulemap",
    ],
    srcs = glob(
        ["ObjCLegacy2/**/*.m"]
    ),
    # copts = ["-fmodules"],
    hdrs = redditFoundationObjc2_hdrs + [
        # These aren't headers but here is the only place to declare these
        # files as the inputs because objc_library doesn't have an
        # attribute to declare custom inputs.
        # ":RedditFoundationObjc2-modulemap",
    ],
    enable_modules = True,
    module_name = "RedditFoundationObjc2",
    # module_map = ":RedditFoundationObjc2-modulemap",
    visibility = ["//visibility:public"],
)
