load("@build_bazel_rules_apple//apple:ios.bzl", "ios_build_test")

objc_library(
    name = "RedditFoundationObjc2",
    deps = ["//RedditFoundation/RedditFoundationObjc"],
    srcs = glob(
        ["ObjCLegacy2/**/*.m"]
    ),
    hdrs = glob(
        ["ObjCLegacy2/**/*.h"]
    ),
    enable_modules = True,
    module_name = "RedditFoundationObjc2",
    visibility = ["//visibility:public"],
)
